--- a/wrangler.toml
+++ b/wrangler.toml
@@ -32,6 +32,6 @@ BUILD_ID = "staging"
 SENDGRID_API_KEY = "dummy"
 # Enable dev auth on staging too
 DEV_AUTH = "true"
-DEV_USER_EMAIL = "dev@example.com"
-DEV_USER_NAME = "Dev User"
-DEV_USER_ID = "1"
+DEV_USER_EMAIL = "demo@client.com"
+DEV_USER_NAME = "Demo User"
+DEV_USER_ID = "3324e3f1de03a6a2b19ff09d9853d828"
